# fabric_ceph/openapi_server/models/__init__.py
@@ -5,6 +5,9 @@ from fabric_ceph.openapi_server.models.cap_render_context import CapRenderContex
 from fabric_ceph.openapi_server.models.capability import Capability
 from fabric_ceph.openapi_server.models.capability_template import CapabilityTemplate
 from fabric_ceph.openapi_server.models.ceph_user import CephUser
+from fabric_ceph.openapi_server.models.cluster_info_item import ClusterInfoItem
+from fabric_ceph.openapi_server.models.cluster_info_item_mons_inner import ClusterInfoItemMonsInner
+from fabric_ceph.openapi_server.models.cluster_info_list import ClusterInfoList
 from fabric_ceph.openapi_server.models.create_user_templated_request import CreateUserTemplatedRequest
 from fabric_ceph.openapi_server.models.export_users_request import ExportUsersRequest
 from fabric_ceph.openapi_server.models.export_users_response import ExportUsersResponse
