# fabric_ceph/openapi_server/models/cluster_info_item_mons_inner.py
@@ -1,0 +1,113 @@
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from fabric_ceph.openapi_server.models.base_model import Model
+from fabric_ceph.openapi_server import util
+
+
+class ClusterInfoItemMonsInner(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, name=None, v2=None, v1=None):  # noqa: E501
+        """ClusterInfoItemMonsInner - a model defined in OpenAPI
+
+        :param name: The name of this ClusterInfoItemMonsInner.  # noqa: E501
+        :type name: str
+        :param v2: The v2 of this ClusterInfoItemMonsInner.  # noqa: E501
+        :type v2: str
+        :param v1: The v1 of this ClusterInfoItemMonsInner.  # noqa: E501
+        :type v1: str
+        """
+        self.openapi_types = {
+            'name': str,
+            'v2': str,
+            'v1': str
+        }
+
+        self.attribute_map = {
+            'name': 'name',
+            'v2': 'v2',
+            'v1': 'v1'
+        }
+
+        self._name = name
+        self._v2 = v2
+        self._v1 = v1
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'ClusterInfoItemMonsInner':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The ClusterInfoItem_mons_inner of this ClusterInfoItemMonsInner.  # noqa: E501
+        :rtype: ClusterInfoItemMonsInner
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def name(self) -> str:
+        """Gets the name of this ClusterInfoItemMonsInner.
+
+
+        :return: The name of this ClusterInfoItemMonsInner.
+        :rtype: str
+        """
+        return self._name
+
+    @name.setter
+    def name(self, name: str):
+        """Sets the name of this ClusterInfoItemMonsInner.
+
+
+        :param name: The name of this ClusterInfoItemMonsInner.
+        :type name: str
+        """
+
+        self._name = name
+
+    @property
+    def v2(self) -> str:
+        """Gets the v2 of this ClusterInfoItemMonsInner.
+
+
+        :return: The v2 of this ClusterInfoItemMonsInner.
+        :rtype: str
+        """
+        return self._v2
+
+    @v2.setter
+    def v2(self, v2: str):
+        """Sets the v2 of this ClusterInfoItemMonsInner.
+
+
+        :param v2: The v2 of this ClusterInfoItemMonsInner.
+        :type v2: str
+        """
+
+        self._v2 = v2
+
+    @property
+    def v1(self) -> str:
+        """Gets the v1 of this ClusterInfoItemMonsInner.
+
+
+        :return: The v1 of this ClusterInfoItemMonsInner.
+        :rtype: str
+        """
+        return self._v1
+
+    @v1.setter
+    def v1(self, v1: str):
+        """Sets the v1 of this ClusterInfoItemMonsInner.
+
+
+        :param v1: The v1 of this ClusterInfoItemMonsInner.
+        :type v1: str
+        """
+
+        self._v1 = v1
