# fabric_ceph/openapi_server/models/cluster_info_list.py
@@ -1,0 +1,219 @@
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from fabric_ceph.openapi_server.models.base_model import Model
+from fabric_ceph.openapi_server.models.cluster_info_item import ClusterInfoItem
+from fabric_ceph.openapi_server import util
+
+from fabric_ceph.openapi_server.models.cluster_info_item import ClusterInfoItem  # noqa: E501
+
+class ClusterInfoList(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, limit=None, offset=None, size=None, status=200, total=None, type=None, data=None):  # noqa: E501
+        """ClusterInfoList - a model defined in OpenAPI
+
+        :param limit: The limit of this ClusterInfoList.  # noqa: E501
+        :type limit: int
+        :param offset: The offset of this ClusterInfoList.  # noqa: E501
+        :type offset: int
+        :param size: The size of this ClusterInfoList.  # noqa: E501
+        :type size: int
+        :param status: The status of this ClusterInfoList.  # noqa: E501
+        :type status: int
+        :param total: The total of this ClusterInfoList.  # noqa: E501
+        :type total: int
+        :param type: The type of this ClusterInfoList.  # noqa: E501
+        :type type: str
+        :param data: The data of this ClusterInfoList.  # noqa: E501
+        :type data: List[ClusterInfoItem]
+        """
+        self.openapi_types = {
+            'limit': int,
+            'offset': int,
+            'size': int,
+            'status': int,
+            'total': int,
+            'type': str,
+            'data': List[ClusterInfoItem]
+        }
+
+        self.attribute_map = {
+            'limit': 'limit',
+            'offset': 'offset',
+            'size': 'size',
+            'status': 'status',
+            'total': 'total',
+            'type': 'type',
+            'data': 'data'
+        }
+
+        self._limit = limit
+        self._offset = offset
+        self._size = size
+        self._status = status
+        self._total = total
+        self._type = type
+        self._data = data
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'ClusterInfoList':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The ClusterInfoList of this ClusterInfoList.  # noqa: E501
+        :rtype: ClusterInfoList
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def limit(self) -> int:
+        """Gets the limit of this ClusterInfoList.
+
+
+        :return: The limit of this ClusterInfoList.
+        :rtype: int
+        """
+        return self._limit
+
+    @limit.setter
+    def limit(self, limit: int):
+        """Sets the limit of this ClusterInfoList.
+
+
+        :param limit: The limit of this ClusterInfoList.
+        :type limit: int
+        """
+
+        self._limit = limit
+
+    @property
+    def offset(self) -> int:
+        """Gets the offset of this ClusterInfoList.
+
+
+        :return: The offset of this ClusterInfoList.
+        :rtype: int
+        """
+        return self._offset
+
+    @offset.setter
+    def offset(self, offset: int):
+        """Sets the offset of this ClusterInfoList.
+
+
+        :param offset: The offset of this ClusterInfoList.
+        :type offset: int
+        """
+
+        self._offset = offset
+
+    @property
+    def size(self) -> int:
+        """Gets the size of this ClusterInfoList.
+
+
+        :return: The size of this ClusterInfoList.
+        :rtype: int
+        """
+        return self._size
+
+    @size.setter
+    def size(self, size: int):
+        """Sets the size of this ClusterInfoList.
+
+
+        :param size: The size of this ClusterInfoList.
+        :type size: int
+        """
+
+        self._size = size
+
+    @property
+    def status(self) -> int:
+        """Gets the status of this ClusterInfoList.
+
+
+        :return: The status of this ClusterInfoList.
+        :rtype: int
+        """
+        return self._status
+
+    @status.setter
+    def status(self, status: int):
+        """Sets the status of this ClusterInfoList.
+
+
+        :param status: The status of this ClusterInfoList.
+        :type status: int
+        """
+
+        self._status = status
+
+    @property
+    def total(self) -> int:
+        """Gets the total of this ClusterInfoList.
+
+
+        :return: The total of this ClusterInfoList.
+        :rtype: int
+        """
+        return self._total
+
+    @total.setter
+    def total(self, total: int):
+        """Sets the total of this ClusterInfoList.
+
+
+        :param total: The total of this ClusterInfoList.
+        :type total: int
+        """
+
+        self._total = total
+
+    @property
+    def type(self) -> str:
+        """Gets the type of this ClusterInfoList.
+
+
+        :return: The type of this ClusterInfoList.
+        :rtype: str
+        """
+        return self._type
+
+    @type.setter
+    def type(self, type: str):
+        """Sets the type of this ClusterInfoList.
+
+
+        :param type: The type of this ClusterInfoList.
+        :type type: str
+        """
+
+        self._type = type
+
+    @property
+    def data(self) -> List[ClusterInfoItem]:
+        """Gets the data of this ClusterInfoList.
+
+
+        :return: The data of this ClusterInfoList.
+        :rtype: List[ClusterInfoItem]
+        """
+        return self._data
+
+    @data.setter
+    def data(self, data: List[ClusterInfoItem]):
+        """Sets the data of this ClusterInfoList.
+
+
+        :param data: The data of this ClusterInfoList.
+        :type data: List[ClusterInfoItem]
+        """
+
+        self._data = data
